error.txt
In file included from main.cpp:8:
matrix.h:147:5: error: invalid use of template-name 'std::iterator' without an argument list
  147 |     iterator begin(){
      |     ^~~~~~~~
matrix.h:147:5: note: class template argument deduction is only available with '-std=c++17' or '-std=gnu++17'
In file included from /usr/include/c++/9.3.0/bits/stl_algobase.h:65,
                 from /usr/include/c++/9.3.0/bits/char_traits.h:39,
                 from /usr/include/c++/9.3.0/ios:40,
                 from /usr/include/c++/9.3.0/ostream:38,
                 from /usr/include/c++/9.3.0/iostream:39,
                 from main.cpp:2:
/usr/include/c++/9.3.0/bits/stl_iterator_base_types.h:118:12: note: 'template<class _Category, class _Tp, class _Distance, class _Pointer, class _Reference> struct std::iterator' declared here
  118 |     struct iterator
      |            ^~~~~~~~
In file included from main.cpp:8:
matrix.h:151:5: error: invalid use of template-name 'std::iterator' without an argument list
  151 |     iterator end(){
      |     ^~~~~~~~
matrix.h:151:5: note: class template argument deduction is only available with '-std=c++17' or '-std=gnu++17'
In file included from /usr/include/c++/9.3.0/bits/stl_algobase.h:65,
                 from /usr/include/c++/9.3.0/bits/char_traits.h:39,
                 from /usr/include/c++/9.3.0/ios:40,
                 from /usr/include/c++/9.3.0/ostream:38,
                 from /usr/include/c++/9.3.0/iostream:39,
                 from main.cpp:2:
/usr/include/c++/9.3.0/bits/stl_iterator_base_types.h:118:12: note: 'template<class _Category, class _Tp, class _Distance, class _Pointer, class _Reference> struct std::iterator' declared here
  118 |     struct iterator
      |            ^~~~~~~~
In file included from main.cpp:10:
net.h: In member function 'void net::train(int, double, const vector<vector<double> >&, const vector<vector<double> >&, int)':
net.h:45:36: error: 'struct vector<vector<double> >' has no member named 'begin'
   45 |             std::random_shuffle(in.begin(),in.end());
      |                                    ^~~~~
net.h:45:47: error: 'struct vector<vector<double> >' has no member named 'end'
   45 |             std::random_shuffle(in.begin(),in.end());
      |                                               ^~~
